--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ pandas==2.1.1
 pyarrow==13.0.0
 requests==2.31.0
 scikit-learn==1.3.2
-scikit-surprise==1.1.3
+# scikit-surprise==1.1.3
 seaborn==0.12.1
 uvicorn==0.24.0.post1
+git+https://github.com/NicolasHug/Surprise.git
